--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="row min-vh-100">
       <div class="about-content">
         <img src="img/profile-img.jpg" alt="profile-img">
-        <h1>Hi, My name is Jason Cassella.</h1>
-        <p>I'm a <span>full stack</span> web developer. View my <a href="#">work</a>, or <a href="#">contact me</a>.</p>
+        <h1>Jason Cassella.</h1>
+        <p>I'm a <span>full stack</span> developer living in <span>NYC</span>. Check out my <a href="#">work</a>, or feel free to <a href="#">contact me</a>.</p>
         <h2>skills</h2>
         <div class="skills">
           <div class="skill-item">HTML</div>
