finishing portfolio descriptions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- BG Animation Effect End-->
  
 <!-- About Section Start -->
-<section class="about-section">
+<section class="about-section hidden">
   <div class="container">
     <div class="row min-vh-100">
       <div class="about-content">
@@ -36,6 +36,229 @@
   </div>
 </section>
 <!-- About Section End -->
+
+<!-- Portfolio Section Start -->
+<section class="portfolio-section sec-padding">
+  <div class="container">
+    <div class="row">
+      <div class="section-title">
+        <h2>recent works</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="portfolio-filter">
+        <button type="button" title="Show All Work" class="portfolio-filter-btn active" data-filter="all">all</button>
+        <button type="button" title="Filter by Front-End" class="portfolio-filter-btn" data-filter="front-end">front-end</button>
+        <button type="button" title="Filter by Back-End" class="portfolio-filter-btn" data-filter="back-end">back-end</button>
+      </div>
+    </div>
+    <div class="row portfolio-items">
+      <!-- portfolio item start -->
+      <div class="portfolio-item" data-category="front-end">
+        <div class="portfolio-item-thumbnail">
+          <img src="img/portfolio/1.jpg" alt="thumbnail">
+          <button type="button" class="btn more-info-btn">more info</button>
+        </div> 
+        <h3 class="portfolio-item-title">education course website</h3>
+        <div class="portfolio-item-details">
+          <div class="description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eaque ullam incidunt voluptates hic delectus dignissimos officiis nobis nihil aut ducimus, saepe at laborum. Nemo autem tenetur excepturi magni maxime atque aliquid ipsam. Voluptas laudantium veniam inventore quia perferendis corrupti, pariatur molestias deleniti rem reprehenderit incidunt maxime nulla nostrum. Laudantium.</p>
+          </div>
+          <div class="general-info">
+            <p>Created - <span>4 Dec 2020</span></p>
+            <p>Technologies Used - <span>HTML, CSS</span></p>
+            <p>Role - <span>Front-End</span></p>
+            <p>View Demo - <span><a href="#" target="_blank">www.domain.com</a></span></p>
+            <p>View Source Code - <span><a href="#" target="_blank">www.github.com</a></span></p>
+          </div>
+        </div>
+      </div>
+      <!-- portfolio item end -->
+
+      <!-- portfolio item start -->
+      <div class="portfolio-item" data-category="front-end">
+        <div class="portfolio-item-thumbnail">
+          <img src="img/portfolio/2.jpg" alt="thumbnail">
+          <button type="button" class="btn more-info-btn">more info</button>
+        </div> 
+        <h3 class="portfolio-item-title">personal portfolio website</h3>
+        <div class="portfolio-item-details">
+          <div class="description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eaque ullam incidunt voluptates hic delectus dignissimos officiis nobis nihil aut ducimus, saepe at laborum. Nemo autem tenetur excepturi magni maxime atque aliquid ipsam. Voluptas laudantium veniam inventore quia perferendis corrupti, pariatur molestias deleniti rem reprehenderit incidunt maxime nulla nostrum. Laudantium.</p>
+          </div>
+          <div class="general-info">
+            <p>Created - <span>4 Dec 2020</span></p>
+            <p>Technologies Used - <span>HTML, CSS</span></p>
+            <p>Role - <span>Front-End</span></p>
+            <p>View Demo - <span><a href="#" target="_blank">www.domain.com</a></span></p>
+            <p>View Source Code - <span><a href="#" target="_blank">www.github.com</a></span></p>
+          </div>
+      </div>
+    </div>
+
+      <!-- portfolio item end -->
+
+      <!-- portfolio item start -->
+      <div class="portfolio-item" data-category="back-end">
+        <div class="portfolio-item-thumbnail">
+          <img src="img/portfolio/3.jpg" alt="thumbnail">
+          <button type="button" class="btn more-info-btn">more info</button>
+        </div> 
+        <h3 class="portfolio-item-title">database project</h3>
+        <div class="portfolio-item-details">
+          <div class="description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eaque ullam incidunt voluptates hic delectus dignissimos officiis nobis nihil aut ducimus, saepe at laborum. Nemo autem tenetur excepturi magni maxime atque aliquid ipsam. Voluptas laudantium veniam inventore quia perferendis corrupti, pariatur molestias deleniti rem reprehenderit incidunt maxime nulla nostrum. Laudantium.</p>
+          </div>
+          <div class="general-info">
+            <p>Created - <span>4 Dec 2020</span></p>
+            <p>Technologies Used - <span>HTML, CSS, Node, Express, MongoDB</span></p>
+            <p>Role - <span>Back-End</span></p>
+            <p>View Demo - <span><a href="#" target="_blank">www.domain.com</a></span></p>
+            <p>View Source Code - <span><a href="#" target="_blank">www.github.com</a></span></p>
+          </div>
+      </div>
+    </div>
+
+      <!-- portfolio item end -->
+
+      <!-- portfolio item start -->
+      <div class="portfolio-item" data-category="front-end">
+        <div class="portfolio-item-thumbnail">
+          <img src="img/portfolio/4.jpg" alt="thumbnail">
+          <button type="button" class="btn more-info-btn">more info</button>
+        </div> 
+        <h3 class="portfolio-item-title">app landing page</h3>
+        <div class="portfolio-item-details">
+          <div class="description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eaque ullam incidunt voluptates hic delectus dignissimos officiis nobis nihil aut ducimus, saepe at laborum. Nemo autem tenetur excepturi magni maxime atque aliquid ipsam. Voluptas laudantium veniam inventore quia perferendis corrupti, pariatur molestias deleniti rem reprehenderit incidunt maxime nulla nostrum. Laudantium.</p>
+          </div>
+          <div class="general-info">
+            <p>Created - <span>4 Dec 2020</span></p>
+            <p>Technologies Used - <span>HTML, CSS</span></p>
+            <p>Role - <span>Front-End</span></p>
+            <p>View Demo - <span><a href="#" target="_blank">www.domain.com</a></span></p>
+            <p>View Source Code - <span><a href="#" target="_blank">www.github.com</a></span></p>
+          </div>
+      </div>
+    </div>
+
+      <!-- portfolio item end -->
+
+      <!-- portfolio item start -->
+      <div class="portfolio-item" data-category="front-end">
+        <div class="portfolio-item-thumbnail">
+          <img src="img/portfolio/5.jpg" alt="thumbnail">
+          <button type="button" class="btn more-info-btn">more info</button>
+        </div> 
+        <h3 class="portfolio-item-title">restaurant website</h3>
+        <div class="portfolio-item-details">
+          <div class="description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eaque ullam incidunt voluptates hic delectus dignissimos officiis nobis nihil aut ducimus, saepe at laborum. Nemo autem tenetur excepturi magni maxime atque aliquid ipsam. Voluptas laudantium veniam inventore quia perferendis corrupti, pariatur molestias deleniti rem reprehenderit incidunt maxime nulla nostrum. Laudantium.</p>
+          </div>
+          <div class="general-info">
+            <p>Created - <span>4 Dec 2020</span></p>
+            <p>Technologies Used - <span>HTML, CSS, JavaScript</span></p>
+            <p>Role - <span>Front-End</span></p>
+            <p>View Demo - <span><a href="#" target="_blank">www.domain.com</a></span></p>
+            <p>View Source Code - <span><a href="#" target="_blank">www.github.com</a></span></p>
+          </div>
+      </div>
+    </div>
+
+      <!-- portfolio item end -->
+
+      <!-- portfolio item start -->
+      <div class="portfolio-item" data-category="front-end">
+        <div class="portfolio-item-thumbnail">
+          <img src="img/portfolio/6.jpg" alt="thumbnail">
+          <button type="button" class="btn more-info-btn">more info</button>
+        </div> 
+        <h3 class="portfolio-item-title">developer portfolio website</h3>
+        <div class="portfolio-item-details">
+          <div class="description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eaque ullam incidunt voluptates hic delectus dignissimos officiis nobis nihil aut ducimus, saepe at laborum. Nemo autem tenetur excepturi magni maxime atque aliquid ipsam. Voluptas laudantium veniam inventore quia perferendis corrupti, pariatur molestias deleniti rem reprehenderit incidunt maxime nulla nostrum. Laudantium.</p>
+          </div>
+          <div class="general-info">
+            <p>Created - <span>4 Dec 2020</span></p>
+            <p>Technologies Used - <span>HTML, CSS, JavaScript</span></p>
+            <p>Role - <span>Front-End</span></p>
+            <p>View Demo - <span><a href="#" target="_blank">www.domain.com</a></span></p>
+            <p>View Source Code - <span><a href="#" target="_blank">www.github.com</a></span></p>
+          </div>
+      </div>
+    </div>
+
+      <!-- portfolio item end -->
+
+      <!-- portfolio item start -->
+      <div class="portfolio-item" data-category="front-end">
+        <div class="portfolio-item-thumbnail">
+          <img src="img/portfolio/7.jpg" alt="thumbnail">
+          <button type="button" class="btn more-info-btn">more info</button>
+        </div> 
+        <h3 class="portfolio-item-title">product landing page</h3>
+        <div class="portfolio-item-details">
+          <div class="description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eaque ullam incidunt voluptates hic delectus dignissimos officiis nobis nihil aut ducimus, saepe at laborum. Nemo autem tenetur excepturi magni maxime atque aliquid ipsam. Voluptas laudantium veniam inventore quia perferendis corrupti, pariatur molestias deleniti rem reprehenderit incidunt maxime nulla nostrum. Laudantium.</p>
+          </div>
+          <div class="general-info">
+            <p>Created - <span>4 Dec 2020</span></p>
+            <p>Technologies Used - <span>HTML, CSS</span></p>
+            <p>Role - <span>Front-End</span></p>
+            <p>View Demo - <span><a href="#" target="_blank">www.domain.com</a></span></p>
+            <p>View Source Code - <span><a href="#" target="_blank">www.github.com</a></span></p>
+          </div>
+      </div>
+    </div>
+
+      <!-- portfolio item end -->
+    </div>
+  </div>
+</section>
+<!-- Portfolio Section End -->
+
+<!-- Portfolio Item Details Popup Start -->
+<div class="portfolio-popup">
+  <div class="pp-inner">
+    <div class="pp-content">
+      <div class="pp-header">
+        <h2 class="pp-counter">
+          7 of 7 ( <span>all</span> )
+        </h2>
+        <button type="button" title="close" class="close-btn pp-close-btn"></button>
+        <div class="pp-thumbnail">
+          <img src="img/portfolio/7.jpg" alt="popup thumbnail">
+        </div>
+        <h3>app landing page</h3>
+      </div>
+      <div class="pp-body">
+        <div class="description">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eaque ullam incidunt voluptates hic delectus dignissimos officiis nobis nihil aut ducimus, saepe at laborum. Nemo autem tenetur excepturi magni maxime atque aliquid ipsam. Voluptas laudantium veniam inventore quia perferendis corrupti, pariatur molestias deleniti rem reprehenderit incidunt maxime nulla nostrum. Laudantium.</p>
+        </div>
+        <div class="general-info">
+          <p>Created - <span>4 Dec 2020</span></p>
+          <p>Technologies Used - <span>HTML, CSS</span></p>
+          <p>Role - <span>Front-End</span></p>
+          <p>View Demo - <span><a href="#" target="_blank">www.domain.com</a></span></p>
+          <p>View Source Code - <span><a href="#" target="_blank">www.github.com</a></span></p>
+        </div>
+      </div>
+      <div class="pp-footer">
+        <div class="pp-footer-left">
+          <button type="button" title="Prev Work" class="btn pp-prev-btn">prev</button>
+          <h3>prev work title</h3>
+          <img src="img/portfolio/1.jpg" alt="prev work thumbnail">
+        </div>
+        <div class="pp-footer-right">
+          <button type="button" title="Next Work" class="btn pp-next-btn">next</button>
+          <h3>next work title</h3>
+          <img src="img/portfolio/2.jpg" alt="prev work thumbnail">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Portfolio Item Details Popup End -->
 
 <script src="js/script.js"></script>
 </body>
