--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <button type="button" title="Filter by Back-End" class="portfolio-filter-btn" data-filter="back-end">back-end</button>
       </div>
     </div>
+    <div class="filter-status">
+      <p>filtering <span>all</span> work</p>
+    </div>
     <div class="row portfolio-items">
       <!-- portfolio item start -->
       <div class="portfolio-item" data-category="front-end">
@@ -223,35 +226,26 @@
     <div class="pp-content">
       <div class="pp-header">
         <h2 class="pp-counter">
-          7 of 7 ( <span>all</span> )
         </h2>
         <button type="button" title="close" class="close-btn pp-close-btn"></button>
         <div class="pp-thumbnail">
           <img src="img/portfolio/7.jpg" alt="popup thumbnail">
         </div>
-        <h3>app landing page</h3>
+        <h3></h3>
       </div>
       <div class="pp-body">
-        <div class="description">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eaque ullam incidunt voluptates hic delectus dignissimos officiis nobis nihil aut ducimus, saepe at laborum. Nemo autem tenetur excepturi magni maxime atque aliquid ipsam. Voluptas laudantium veniam inventore quia perferendis corrupti, pariatur molestias deleniti rem reprehenderit incidunt maxime nulla nostrum. Laudantium.</p>
-        </div>
-        <div class="general-info">
-          <p>Created - <span>4 Dec 2020</span></p>
-          <p>Technologies Used - <span>HTML, CSS</span></p>
-          <p>Role - <span>Front-End</span></p>
-          <p>View Demo - <span><a href="#" target="_blank">www.domain.com</a></span></p>
-          <p>View Source Code - <span><a href="#" target="_blank">www.github.com</a></span></p>
-        </div>
       </div>
       <div class="pp-footer">
-        <div class="pp-footer-left">
-          <button type="button" title="Prev Work" class="btn pp-prev-btn">prev</button>
-          <h3>prev work title</h3>
+        <div class="pp-footer-left hidden">
+          <button type="button" title="Prev Work" class="btn pp-prev-btn">
+            <i class="fas fa-arrow-left"></i></button>
+          <h3></h3>
           <img src="img/portfolio/1.jpg" alt="prev work thumbnail">
         </div>
-        <div class="pp-footer-right">
-          <button type="button" title="Next Work" class="btn pp-next-btn">next</button>
-          <h3>next work title</h3>
+        <div class="pp-footer-right hidden">
+          <button type="button" title="Next Work" class="btn pp-next-btn">
+            <i class="fas fa-arrow-right"></i></button>
+          <h3></h3>
           <img src="img/portfolio/2.jpg" alt="prev work thumbnail">
         </div>
       </div>
