6 projects instead of 7 looks better

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <!-- portfolio item end -->
 
       <!-- portfolio item start -->
-      <div class="portfolio-item" data-category="front-end">
+      <div class="portfolio-item" data-category="back-end">
         <div class="portfolio-item-thumbnail">
           <img src="img/portfolio/5.jpg" alt="thumbnail">
           <button type="button" class="btn more-info-btn">more info</button>
@@ -192,30 +192,6 @@
     </div>
 
       <!-- portfolio item end -->
-
-      <!-- portfolio item start -->
-      <div class="portfolio-item" data-category="front-end">
-        <div class="portfolio-item-thumbnail">
-          <img src="img/portfolio/7.jpg" alt="thumbnail">
-          <button type="button" class="btn more-info-btn">more info</button>
-        </div> 
-        <h3 class="portfolio-item-title">product landing page</h3>
-        <div class="portfolio-item-details">
-          <div class="description">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eaque ullam incidunt voluptates hic delectus dignissimos officiis nobis nihil aut ducimus, saepe at laborum. Nemo autem tenetur excepturi magni maxime atque aliquid ipsam. Voluptas laudantium veniam inventore quia perferendis corrupti, pariatur molestias deleniti rem reprehenderit incidunt maxime nulla nostrum. Laudantium.</p>
-          </div>
-          <div class="general-info">
-            <p>Created - <span>4 Dec 2020</span></p>
-            <p>Technologies Used - <span>HTML, CSS</span></p>
-            <p>Role - <span>Front-End</span></p>
-            <p>View Demo - <span><a href="#" target="_blank">www.domain.com</a></span></p>
-            <p>View Source Code - <span><a href="#" target="_blank">www.github.com</a></span></p>
-          </div>
-      </div>
-    </div>
-
-      <!-- portfolio item end -->
-    </div>
   </div>
 </section>
 <!-- Portfolio Section End -->
